--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "registry": "https://npm.pkg.github.com/laf-component-library"
   },
   "version": "0.0.4",
-  "description": "A simple template for a custom React component library",
+  "description": "",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
