--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/laf-component-library"
   },
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "",
   "scripts": {
     "rollup": "rollup -c",
@@ -55,6 +55,8 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@builder.io/mitosis": "^0.0.81",
+    "@builder.io/mitosis-cli": "^0.0.39",
     "@storybook/testing-library": "^0.0.13",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.19"
